Fixed icons, spacing, and nav

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 html,body,h1,h2,h3,h4,p {
     font-family: 'IBM Plex Mono', monospace;
   }
@@ -9,6 +8,10 @@ html,body,h1,h2,h3,h4,p {
 
 html {
   scroll-behavior: smooth;
+}
+
+#CADS {
+  color:#FFFFFF;
 }
 
 
